---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "RateLimited { detail: \"The `sendTx` settlement has been limited: Limit reached\", error: SendTxRateLimited(RateLimited { max_per_interval: 4, time_interval: 2400s, until_next: None }) }"
---
{
  "code": -10007,
  "data": {
    "rate-limited": {
      "detail": "The `sendTx` settlement has been limited: Limit reached",
      "error": {
        "send-tx-rate-limited": {
          "max-per-interval": 4,
          "time-interval": 2400,
          "until-next": null
        }
      }
    }
  },
  "message": "Rate limited"
}
